--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -4,11 +4,27 @@
 <array>
 	<dict>
 		<key>phrase</key>
+		<string> (◞‸◟)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1408622648</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string> 人ゝω・)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1417965742</integer>
+		<integer>1418264485</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>_(._.)_</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1414395039</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -16,7 +32,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1401292018</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -24,7 +40,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1390383349</integer>
+		<integer>1408622648</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(　・ω・)ﾓﾆｭ?</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1418264495</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -32,7 +56,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885655</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -40,7 +64,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1414391932</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -48,7 +72,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885682</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -56,7 +80,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1418264485</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>( д )　゜　゜</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1418264521</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -64,7 +96,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885835</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -72,7 +104,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1390739356</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -80,7 +112,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1397922258</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -88,7 +120,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1411542397</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -96,7 +128,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -104,7 +136,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -112,7 +144,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1393986630</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -120,7 +152,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -128,7 +160,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1417965711</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -136,7 +168,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1408622648</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(｀･ω･´)ゞ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1415086785</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -144,7 +184,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -152,7 +192,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128386</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -160,7 +200,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128449</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -168,7 +208,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885787</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -176,7 +216,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1408622718</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -184,7 +224,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -192,7 +232,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -200,7 +240,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1414387198</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -208,7 +248,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -216,7 +256,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885691</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -224,7 +264,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885669</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -232,7 +272,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885825</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -240,7 +280,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -248,7 +288,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128409</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -256,7 +296,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1414382864</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -264,7 +304,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1404229056</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -272,7 +312,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1397922240</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -280,7 +320,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1395423089</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -288,7 +328,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -296,7 +336,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -304,7 +344,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1411542385</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -312,7 +352,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128398</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -320,7 +360,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885717</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -328,7 +368,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -336,7 +376,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -344,7 +384,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885775</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -352,7 +392,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1413885806</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -360,7 +400,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1418264485</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -368,7 +408,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1411542408</integer>
 	</dict>
 </array>
 </plist>
