--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -4,35 +4,11 @@
 <array>
 	<dict>
 		<key>phrase</key>
-		<string> (◞‸◟)</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1408622648</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
 		<string> 人ゝω・)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>_(._.)_</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1414395039</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>:;(∩´﹏`∩);:</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1417965742</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -40,15 +16,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>(　・ω・)ﾓﾆｭ?</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1418264495</integer>
+		<integer>1390383349</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -56,7 +24,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885655</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -64,7 +32,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414391932</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -72,7 +40,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885682</integer>
+		<integer>1414431833</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(￣▽￣)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1418655807</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -80,15 +56,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>( д )　゜　゜</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1418264521</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -96,7 +64,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885835</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -104,7 +72,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1390739356</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -112,7 +80,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1397922258</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -120,7 +88,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1411542397</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -128,7 +96,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -136,7 +104,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -144,7 +112,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1393986630</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -152,7 +120,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1414431833</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(*｀へ´*)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1418655787</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -160,7 +136,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1417965711</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -168,15 +144,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>(｀･ω･´)ゞ</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1415086785</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -184,7 +152,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -192,7 +160,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128386</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -200,7 +168,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128449</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -208,7 +176,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885787</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -216,7 +184,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622718</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -224,7 +192,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -232,15 +200,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>(´∀｀∩)</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1414387198</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -248,7 +208,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -256,15 +216,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885691</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(∩´∀｀)∩ﾜｰｲ</string>
+		<string>(＞人＜;)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885669</integer>
+		<integer>1418655760</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -272,7 +232,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885825</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -280,7 +240,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(T_T)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1418655816</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -288,7 +256,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128409</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -296,7 +264,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414382864</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -304,7 +272,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1404229056</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -312,7 +280,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1397922240</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -320,7 +288,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1395423089</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -328,7 +296,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -336,7 +304,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -344,7 +312,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1411542385</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -352,7 +320,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128398</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -360,7 +328,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885717</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -368,7 +336,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -376,7 +344,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -384,7 +352,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885775</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -392,7 +360,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885806</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -400,7 +368,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418264485</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -408,7 +376,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1411542408</integer>
+		<integer>1414431833</integer>
 	</dict>
 </array>
 </plist>
